style: format code with black

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ DEVELOPMENT_GUIDE.md
 QUICK_START_GUIDE.md
 PROJECT_SETUP_SUMMARY.md
 CONFIG_REVIEW.md
+CONFIGURATION_REPORT_FINAL.md
+QUICK_FIX.md
