--- a/.gitignore
+++ b/.gitignore
@@ -206,9 +206,4 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-DEVELOPMENT_GUIDE.md
-QUICK_START_GUIDE.md
-PROJECT_SETUP_SUMMARY.md
-CONFIG_REVIEW.md
-CONFIGURATION_REPORT_FINAL.md
-QUICK_FIX.md
+# Documentation artifacts (kept in .gemini/brain/ instead)
