--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,25 +86,8 @@ extend-exclude = '''
 )/
 '''
 
-# isort configuration
-[tool.isort]
-profile = "black"
-line_length = 100
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-skip_gitignore = true
-
-# mypy configuration
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = false
-ignore_missing_imports = true
-files = ["mini_infer"]
+# Note: isort and mypy configurations removed for simplicity
+# Add them back when the project matures
 
 # pytest configuration
 [tool.pytest.ini_options]
